# wasm-insight

./: .gitignore  README.md
.circleci/: config.yml  install_c_toolchain.sh  install_golang_sdk.sh
agedWasm/: CMakeLists.txt  main.c
agedWasm/data/: CMakeLists.txt  container.h  type.h
agedWasm/data/array/: array.c  array.h
agedWasm/data/buffer/: buffer.c  buffer.h
agedWasm/data/deque/: deque.h
agedWasm/include/: addExample.h  importExample.h
agedWasm/include/consts/: consts.c  nums.h  opcodes.h
agedWasm/include/datas/: buffer.h  type.h  types.h
agedWasm/include/datas/readers/: readers.h
agedWasm/include/datas/readers/stringReaders/: stringReaders.c
agedWasm/include/datas/readers/uintReaders/: reader.h  u8.h
agedWasm/include/decoders/: decoder.c  decoder.h
agedWasm/include/decoders/exportsDecoder/: exportsDecoder.c  exportsDecoder.h
agedWasm/include/decoders/funcsDecoder/: funcsDecoder.c
agedWasm/include/decoders/importsDecoder/: importsDecoder.c  importsDecoder.h
agedWasm/include/decoders/magicDecoder/: magicDecoder.c  magicDecoder.h
agedWasm/include/decoders/typesDecoder/: typesDecoder.c  typesDecoder.h
agedWasm/include/objects/: wasmObjects.h
agedWasm/include/objects/exports/: exportObject.h  exportsObject.h
agedWasm/include/objects/funcs/: funcsObject.h
agedWasm/include/objects/imports/: importObject.h
agedWasm/include/objects/magic/: magicObject.h
agedWasm/include/objects/start/: startObject.h
agedWasm/include/objects/types/: typeObject.h  typesObject.h
agedWasm/include/platform/: adaptTypes.h
agedWasm/includes/: addExample.h  buffer.h  types.h
agedWasm/includes/consts/: codes.h  nums.h  opcodes.h  typecodes.h
agedWasm/includes/datas/: buffer.h  str.h  type.h  types.h  vector.h
agedWasm/includes/datas/readers/byteReaders/: byteReaders.c  byteReaders.h
agedWasm/includes/datas/readers/stringReaders/: stringReaders.h
agedWasm/includes/datas/readers/uintReaders/: uintReaders.c  uintReaders.h
agedWasm/includes/decoders/: decoder.c  decoder.h
agedWasm/includes/decoders/exportsDecoder/: exportsDecoder.c  exportsDecoder.h
agedWasm/includes/decoders/funcsDecoder/: funcsDecoder.c  funcsDecoder.h
agedWasm/includes/decoders/importsDecoder/: importsDecoder.c  importsDecoder.h
agedWasm/includes/decoders/magicDecoder/: magicDecoder.c  magicDecoder.h
agedWasm/includes/decoders/typesDecoder/: typesDecoder.c  typesDecoder.h
agedWasm/includes/objects/: wasmObject.h  wasmObjects.c  wasmObjects.h
agedWasm/includes/objects/data/: dataObject.h
agedWasm/includes/objects/elem/: elemObject.h
agedWasm/includes/objects/exports/: exportObject.h  exportsObject.h
agedWasm/includes/objects/funcs/: funcsObject.h
agedWasm/includes/objects/globals/: globalsObject.h
agedWasm/includes/objects/imports/: importsObject.h
agedWasm/includes/objects/mems/: memsObject.h
agedWasm/includes/objects/start/: startObject.h
agedWasm/includes/objects/tables/: tablesObject.h
agedWasm/includes/objects/types/: typeObject.h  typesObject.h
agedWasm/includes/platform/: adaptLibs.c  adaptLibs.h  adaptTypes.h
agedWasm/src/: addExample.h  importExample.h
agedWasm/src/consts/: nums.h  typecodes.h
agedWasm/src/data/: data.c
agedWasm/src/datas/: types.h  vector.h
agedWasm/src/datas/readers/byteReaders/: byteReaders.c  byteReaders.h
agedWasm/src/datas/readers/stringReaders/: stringReaders.h
agedWasm/src/datas/readers/uintReaders/: reader.c  u8.c  u8.h  uintReaders.c
agedWasm/src/decoders/: decoder.c  decoder.h
agedWasm/src/decoders/exportsDecoder/: exportsDecoder.c  exportsDecoder.h
agedWasm/src/decoders/funcsDecoder/: funcsDecoder.c  funcsDecoder.h
agedWasm/src/decoders/importsDecoder/: importsDecoder.c  importsDecoder.h
agedWasm/src/decoders/magicDecoder/: magicDecoder.c  magicDecoder.h
agedWasm/src/decoders/typesDecoder/: typesDecoder.c  typesDecoder.h
agedWasm/src/objects/: wasmObjects.h
agedWasm/src/objects/elem/: elemObject.h
agedWasm/src/objects/exports/: exportObject.h  exportsObject.h
agedWasm/src/objects/funcs/: funcsObject.h
agedWasm/src/objects/imports/: importObject.h  importsObject.h
agedWasm/src/objects/magic/: magicObject.h
agedWasm/src/objects/tables/: tablesObject.h
agedWasm/src/objects/types/: typeObject.h  typesObject.h
agedWasm/src/platform/: adaptLibs.c  adaptLibs.h
agedWasm/test/: array.h  buffer.h  decoder.h  i64read.h  tests.c  vector.h
agedWasm/tests/: buffer.h  bufferTest.c  decoder.h  decoderTest.c  fix_msvc.c  i64read.h  i64readTest.c  readers.h  readersTest.c  tests.c  vector.h  vectorTest.c
agedWasm/tests/unity/: unity.c  unity_internals.h
articles/: add_example.md  intro.md
fuckWasm/: code.go  decoder.go  fuckwasm.go  go.mod  module.go  opcodes.go  types.go
fuckWasm/cmd/wasmdump/: main.go
samples/: import.c  import.wasm  main.c  main.wasm
uwe/: README.md
